# Gym_Microservices

./: CMakeLists.txt  Dockerfile  docker-compose.yml
AddingPages/: AddingPages.sln
AddingPages/AddingPages/: AddingPages.cpp  AddingPages.vcxproj  AddingPages.vcxproj.filters  CMakeLists.txt  Dockerfile  adding_pages.h  docker-compose.yml
AddingPages/AddingPages/x64/Debug/: AddingPages.exe.recipe  AddingPages.vcxproj.FileListAbsolute.txt  vc143.idb
AddingPages/AddingPages/x64/Debug/AddingPages.tlog/: AddingPages.lastbuildstate  AddingPages.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
AuthorizationAdmin/: AuthorizationAdmin.sln
AuthorizationAdmin/AuthorizationAdmin/: AuthorizationAdmin.cpp  AuthorizationAdmin.vcxproj  AuthorizationAdmin.vcxproj.filters  CMakeLists.txt  Dockerfile  autAdmin.h  docker-compose.yml
AuthorizationAdmin/AuthorizationAdmin/x64/Debug/: AuthorizationAdmin.exe.recipe  AuthorizationAdmin.vcxproj.FileListAbsolute.txt  vc143.idb
AuthorizationAdmin/AuthorizationAdmin/x64/Debug/Authoriz.c46aefd6.tlog/: AuthorizationAdmin.lastbuildstate  AuthorizationAdmin.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
AuthorizationUser/: AuthorizationUser.sln
AuthorizationUser/AuthorizationUser/: AuthorizationUser.cpp  AuthorizationUser.vcxproj  AuthorizationUser.vcxproj.filters  CMakeLists.txt  Dockerfile  autUser.h  docker-compose.yml  hash.h
AuthorizationUser/AuthorizationUser/x64/Debug/: AuthorizationUser.exe.recipe  AuthorizationUser.vcxproj.FileListAbsolute.txt  vc143.idb
AuthorizationUser/AuthorizationUser/x64/Debug/Authoriz.e42ae8ff.tlog/: AuthorizationUser.lastbuildstate  AuthorizationUser.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CreateDbTable/: CreateDbTable.sln
CreateDbTable/CreateDbTable/: CMakeLists.txt  CreateDbTable.cpp  CreateDbTable.vcxproj  CreateDbTable.vcxproj.filters  Dockerfile
EletingRecords/: EletingRecords.sln
EletingRecords/EletingRecords/: CMakeLists.txt  Dockerfile  EletingRecords.cpp  EletingRecords.vcxproj  EletingRecords.vcxproj.filters  docker-compose.yml
EletingRecords/EletingRecords/x64/Debug/: EletingRecords.exe.recipe  EletingRecords.vcxproj.FileListAbsolute.txt  vc143.idb
EletingRecords/EletingRecords/x64/Debug/EletingRecords.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  EletingRecords.lastbuildstate  EletingRecords.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
RegistrationAdministrator/: RegistrationAdministrator.sln
RegistrationAdministrator/RegistrationAdministrator/: CMakeLists.txt  Dockerfile  RegistrationAdministrator.cpp  RegistrationAdministrator.vcxproj  RegistrationAdministrator.vcxproj.filters  docker-compose.yml  reg_Admin.h
RegistrationAdministrator/RegistrationAdministrator/x64/Debug/: RegistrationAdministrator.exe.recipe  RegistrationAdministrator.vcxproj.FileListAbsolute.txt  vc143.idb
RegistrationAdministrator/RegistrationAdministrator/x64/Debug/Registra.a0c8d09f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RegistrationAdministrator.lastbuildstate  RegistrationAdministrator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
RegistrationUser/: RegistrationUser.sln
RegistrationUser/RegistrationUser/: CMakeLists.txt  Dockerfile  RegistrationUser.cpp  RegistrationUser.vcxproj  RegistrationUser.vcxproj.filters  docker-compose.yml  hash.h  reg_User.h
RegistrationUser/RegistrationUser/x64/Debug/: RegistrationUser.exe.recipe  RegistrationUser.vcxproj.FileListAbsolute.txt  vc143.idb
RegistrationUser/RegistrationUser/x64/Debug/RegistrationUser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RegistrationUser.lastbuildstate  RegistrationUser.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ViewAvailableRooms/: ViewAvailableRooms.sln
ViewAvailableRooms/ViewAvailableRooms/: CMakeLists.txt  Dockerfile  ViewAvailableRooms.cpp  ViewAvailableRooms.vcxproj  ViewAvailableRooms.vcxproj.filters  docker-compose.yml  get_gyms-json.h
ViewAvailableRooms/ViewAvailableRooms/x64/Debug/: ViewAvailableRooms.exe.recipe  ViewAvailableRooms.vcxproj.FileListAbsolute.txt  vc143.idb
ViewAvailableRooms/ViewAvailableRooms/x64/Debug/ViewAvai.2ccedb67.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ViewAvailableRooms.lastbuildstate  ViewAvailableRooms.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
